// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should have all props including customProps set correctly 1`] = `
<span
  className="text italic word-wrap visually-hidden font-size-20 font-weight-200"
  id="id"
  style={Object {}}
>
  All props and custom attrs
</span>
`;

exports[`Text should render a text component 1`] = `
<span
  className="text"
  style={Object {}}
>
  Test
</span>
`;

exports[`Text should render a text component with fontSize prop set 1`] = `
<span
  className="text font-size-24"
  style={Object {}}
>
  Test
</span>
`;

exports[`Text should render a text component with isItalic prop set 1`] = `
<span
  className="text italic"
  style={Object {}}
>
  Test
</span>
`;

exports[`Text should render a text component with isVisuallyHidden prop set 1`] = `
<span
  className="text visually-hidden"
  style={Object {}}
>
  Test
</span>
`;

exports[`Text should render a text component with isWordWrapped prop set 1`] = `
<span
  className="text word-wrap"
  style={Object {}}
>
  Test
</span>
`;

exports[`Text should render a text component with weight prop set 1`] = `
<span
  className="text font-weight-200"
  style={Object {}}
>
  Test
</span>
`;

exports[`Text should support rendering a string as children 1`] = `
<span
  className="text"
  style={Object {}}
>
  String
</span>
`;

exports[`Text should support rendering an array of elements as a children 1`] = `
<span
  className="text"
  style={Object {}}
>
  <span>
    Element 1
  </span>
  <span>
    Element 2
  </span>
  <span>
    Element 3
  </span>
</span>
`;

exports[`Text should support rendering an element as children 1`] = `
<span
  className="text"
  style={Object {}}
>
  <span>
    Element
  </span>
</span>
`;
